--- a/sntzr.yaml
+++ b/sntzr.yaml
@@ -1,5 +1,6 @@
 ---
-sanitize_ip: true
+ip_regex: '\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}'
+ip_prefix: '1.1.1.'
 keywords:
   'abc\.com': 'acme.com'
   'www\.com': 'acme.org'
