Add global pattern findings

--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,7 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/node,java,linux,macos,maven,python,eclipse,windows,virtualenv,intellij+all
 .vscode/
+
+
+Pipfile
+Pipfile.lock
