--- a/sntzr.yaml
+++ b/sntzr.yaml
@@ -5,10 +5,55 @@ global_patterns:
     'kindof_placeholder': '-'
     'regex': '[A-Fa-f0-9]{32,64}'
     'activated': true
+  - 'kind': 'crazy_name'
+    'kindof': 'raw'
+    'kindof_placeholder': '-'
+    'regex': 'S(?:\-\d+){3}'
+    'activated': true
   - 'kind': 'mac_address_no_colon'
     'kindof': 'tag_xml'
     'kindof_placeholder': 'RawMACAddress'
     'regex': '[A-Fa-f0-9]{12}'
+    'activated': true
+  - 'kind': 'machine_name'
+    'kindof': 'tag_xml'
+    'kindof_placeholder': 'MachineName'
+    'regex': '[A-Z0-9-]+'
+    'activated': true
+  - 'kind': 'machine_name'
+    'kindof': 'tag_xml'
+    'kindof_placeholder': 'TargetHostName'
+    'regex': '[A-Z0-9-]+'
+    'activated': true
+  - 'kind': 'machine_name'
+    'kindof': 'tag_xml'
+    'kindof_placeholder': 'AnalyzerHostName'
+    'regex': '[A-Z0-9-]+'
+    'activated': true
+  - 'kind': 'ip'
+    'kindof': 'raw'
+    'kindof_placeholder': '-'
+    'regex': '\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}'
+    'activated': true
+  - 'kind': 'guid'
+    'kindof': 'raw'
+    'kindof_placeholder': '-'
+    'regex': '[A-Fa-f0-9]{8}(?:-[A-Fa-f0-9]{4}){3}-[A-Fa-f0-9]{12}'
+    'activated': true
+  - 'kind': 'external_id'
+    'kindof': 'kv'
+    'kindof_placeholder': 'externalId'
+    'regex': '[0-9]{6}'
+    'activated': true
+  - 'kind': 'shost'
+    'kindof': 'kv'
+    'kindof_placeholder': 'shost'
+    'regex': '[a-z0-9]*\.[a-z0-9]*\.[a-z0-9]*'
+    'activated': true
+  - 'kind': 'dt_machine_name'
+    'kindof': 'raw'
+    'kindof_placeholder': ''
+    'regex': 'dtools-dt-[0-9]{4}-[0-9]{2}'
     'activated': true
 ip_regex: '\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}'
 ip_prefix: '1.1.1.'
