--- a/sntzr.yaml
+++ b/sntzr.yaml
@@ -8,51 +8,254 @@ patterns:
     'field': 'RawMACAddress'
     'pattern': '[A-Fa-f0-9]{12}'
     'replace': 'hex'
+    'activated': false
   - 'data': 'raw'
     'field': '-'
     'pattern': '[A-Fa-f0-9]{32,64}'
     'replace': 'hex'
+    'activated': false
   - 'data': 'raw'
     'field': '-'
     'pattern': 'S(?:\-\d+){3}'
     'replace': 'crazy_name'
+    'activated': false
   - 'data': 'xml'
     'field': 'MachineName'
     'pattern': 'gr://machine_name'
     'replace': 'machine_name'
+    'activated': false
   - 'data': 'xml'
     'field': 'TargetHostName'
     'pattern': 'gr://machine_name'
     'replace': 'machine_name'
+    'activated': false
   - 'data': 'xml'
     'field': 'AnalyzerHostName'
     'pattern': 'gr://machine_name'
     'replace': 'machine_name'
+    'activated': false
   - 'data': 'xml'
     'field': 'IPAddress'
     'pattern': 'gr://ipv4'
     'replace': 'ipv4'
+    'activated': false
   - 'data' : 'raw'
     'field': '-'
     'pattern': '[A-Fa-f0-9]{8}(?:-[A-Fa-f0-9]{4}){3}-[A-Fa-f0-9]{12}'
     'replace': 'guid'
+    'activated': false
   - 'data' : 'kv'
     'field': 'externalId'
     'pattern': '[0-9]{6}'
     'replace': 'external_id'
+    'activated': false
   - 'data' : 'kv'
     'field': 'shost'
     'pattern': '[a-z0-9]*\.[a-z0-9]*\.[a-z0-9]*'
     'replace': 'shost'
+    'activated': false
   - 'data' : 'raw'
     'field': '-'
     'pattern': 'dtools-dt-[0-9]{4}-[0-9]{2}'
     'replace': 'dt_machine_name'
+    'activated': false
   - 'data': 'raw'
     'field': '-'
     'pattern': 'gr://ipv4'
     'replace': 'ipv4'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': '\s\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\s'
+    'replace': 'ipv4_between_spaces'
+    'activated': false
   - 'data': 'raw'
     'field': '-'
     'pattern': 'NCR'
     'replace': 'ALOHA'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'GPPBX5672UP-B'
+    'replace': 'GTTBZ4311IP-C'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'MSDATA9372PX-A'
+    'replace': 'MXDATA4162PQ-L'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'N5K-1'
+    'replace': 'Z4K-1'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'N5K-2'
+    'replace': 'Z4K-2'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'SLCDATA9372PX-A'
+    'replace': 'STFDATA41374KT-X'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'SLCDATA9372PX-B'
+    'replace': 'STFDATA41374KT-Y'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'STFDATA93180YC-EX-A'
+    'replace': 'AXYDATA41890ZW-AB-D'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'STJDATA9372PX-A'
+    'replace': 'SLWDATA4223PO-A'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'STJDATA9372PX-A'
+    'replace': 'SLWDATA4223PO-B'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'berssadbsedee51r'
+    'replace': 'batszadbturs11a'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'seaboard.local'
+    'replace': 'earthdoarb.local'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'Perryton_Batman_Grain'
+    'replace': 'Jhon_Dow_Bran'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'TXFCtrlRm3560'
+    'replace': 'AXFAbrlRe1234'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'GPADMIN3750X-1'
+    'replace': 'TFAADMIN213Z-1'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'GPPBX2960X'
+    'replace': 'TGFAZ1121Z'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': '10.40.0.20'
+    'replace': '10.40.1.50'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': '[0-9]+:\s+[A-Z0-9_-]+:'
+    'replace': 'syslog_id_host'
+    'activated': false
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'Host\s[A-Fa-f0-9]+\.[A-Fa-f0-9]+\.[A-Fa-f0-9]+\s'
+    'replace': 'host_numbers_letters'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'Device IP Address'
+    'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': true
+  - 'data': 'kv'
+    'field': 'AD-IP-Address'
+    'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': true
+  - 'data': 'kv'
+    'field': 'AD-IP-Address-Black-Listed'
+    'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': true
+  - 'data': 'kv'
+    'field': 'DestinationIPAddress'
+    'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': true
+  - 'data': 'kv'
+    'field': 'UserName'
+    'pattern': '[\w\d.]+\\\\\\\\[\w\d.]+'
+    'replace': 'domain_plus_user'
+    'activated': true
+  - 'data': 'kv'
+    'field': 'UserName'
+    'pattern': '[\w\d.-]+/[\w\d.-]+'
+    'replace': 'host_plus_domain'
+    'activated': true
+  - 'data': 'kv'
+    'field': 'UserName'
+    'pattern': '[\w\d.-]+.[\w\d.-]+'
+    'replace': 'user_name_dot_surname'
+    'activated': true
+  - 'data': 'kv'
+    'field': 'User-Name'
+    'pattern': '[\w\d.]+\\\\\\\\[\w\d.]+'
+    'replace': 'domain_plus_user'
+    'activated': true
+  - 'data': 'kv'
+    'field': 'User-Name'
+    'pattern': '[\w\d.]+@[\w\d.]+'
+    'replace': 'domain_email_user'
+    'activated': true
+  - 'data': 'kv'
+    'field': 'User-Name'
+    'pattern': '[\w\d.-]+.[\w\d.-]+'
+    'replace': 'user_name_dot_surname'
+    'activated': true
+  - 'data': 'kv'
+    'field': 'AD-Domain'
+    'pattern': '[\w\d.]+'
+    'replace': 'ad_domain'
+    'activated': true
+  - 'data': 'kv'
+    'field': 'AD-Log-Id'
+    'pattern': '\d+/\d+'
+    'replace': 'ad_log_id'
+    'activated': true
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': '(?:[A-Fa-f0-9]{2}-){5}[A-Fa-f0-9]{2}'
+    'replace': 'mac_address_dash'
+    'activated': true
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': '(?:[A-Fa-f0-9]{2}:){5}[A-Fa-f0-9]{2}'
+    'replace': 'mac_address_colon'
+    'activated': true
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'corkcacs2'
+    'replace': 'varksacs2'
+    'activated': true
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'stfacs'
+    'replace': 'abgacs'
+    'activated': true
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'PORGPACS'
+    'replace': 'PIIGSACS'
+    'activated': true
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'sdmryprddom2'
+    'replace': 'sbtryhomdom1'
+    'activated': true
+  - 'data': 'raw'
+    'field': '-'
+    'pattern': 'sebmexico'
+    'replace': 'baschile'
+    'activated': true
