making sntzr.yaml fields as non mandatories

--- a/sntzr.yaml
+++ b/sntzr.yaml
@@ -2,16 +2,154 @@
 global_regex:
   'gr://machine_name': '[A-Z0-9-]+'
   'gr://ipv4': '\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}'
+  'gr://host': '(?:[0-9A-Za-z][0-9A-Za-z-]{0,62})(?:\.(?:[0-9A-Za-z][0-9A-Za-z-]{0,62}))*'
+  'gr://latitude_longitude': '[+-]?[\d]+\.[\d]+'
+  'gr://guid': '[A-Fa-f0-9]{8}(?:-[A-Fa-f0-9]{4}){3}-[A-Fa-f0-9]{12}'
 
 patterns:
+  # KIERAS
+  - 'pattern': '@[^xyz.com].*?>'
+    'replace': '@acmex.com>'
+  - 'pattern': 'vuhl\.root\.mrc'
+    'replace': 'acme.root.mrc'
+  - 'pattern': 'vu\.com'
+    'replace': 'acme.com'
+  - 'pattern': 'veteransunited'
+    'replace': 'acme'
+  - 'pattern': '<EMailAddress>.*?</EMailAddress>'
+    'replace': '<EMailAddress>john@acme.com</EMailAddress>'
+  - 'pattern': 'vu_security_policy'
+    'replace': 'acme_security_policy'
+  - 'pattern': 'aeth\.aetna\.com'
+    'replace': 'acme.com'
+  - 'pattern': '"ssh-rsa .*?\\"'
+    'replace': '"ssh-rsa __SSH_KEY__"'
+  - 'pattern': '\\"USERNAME\\": \\".*?\\"'
+    'replace': '\"USERNAME\": \"johndoe\"'
+  - 'pattern': '\\"USER\\": \\".*?\\"'
+    'replace': '\"USER\": \"johndoe\"'
+  - 'pattern': '\\"PASSWORD\\": \\".*?\\"'
+    'replace': '\"PASSWORD\": \"fakepassword\"'
+  - 'pattern': 'AETH'
+    'replace': 'ACME'
+  - 'pattern': 'aetna\.co'
+    'replace': 'acme.co'
+  - 'pattern': 'aeth'
+    'replace': 'acme'
+  - 'pattern': '\\"windows_desktopini_access_username\\": \\".*?\\"'
+    'replace': '\"windows_desktopini_access_username\": \"johndoe\"'
+  - 'pattern': '\\"mac_address\\": \\".*?\\"'
+    'replace': '\"mac_address\": \"00:00:00:00:00:00\"'
+  - 'pattern': 'EUOSDSFTP01'
+    'replace': 'XXXXXXFTP01'
+  - 'pattern': 'ironmountain'
+    'replace': 'acme'
+  - 'pattern': '\\"user\\": \\".*?\\"'
+    'replace': '\\"user\\": \\"johndoe\\"'
+  - 'pattern': '\\"user\\":\\".*?\\"'
+    'replace': '\\"user\\":\\"johndoe\\"'
+  - 'pattern': '"user": ".*?"'
+    'replace': '"user": "johndoe"'
+  - 'pattern': '<user>.*?</user>'
+    'replace': '<user>johndoe</user>'
+  - 'pattern': '\\u003cuser\\u003e.*?\\u003c/user\\u003e'
+    'replace': '\\u003cuser\\u003ejohndoe\\u003c/user\\u003e'
+  - 'pattern': '/users/[a-zA-Z0-9._-]+'
+    'replace': '/users/johndoe'
+  - 'pattern': 'tartarus.org'
+    'replace': 'somecompany.org'
+  - 'pattern': 'euosdsftp02'
+    'replace': 'xxyyzzftp02'
+  - 'pattern': 'recall.com'
+    'replace': 'emca.com'
+  - 'pattern': 'Carlsberg'
+    'replace': 'JohnD'
+  - 'pattern': 'Sanofi'
+    'replace': 'JohnD'
+  - 'pattern': 'recallstoraenso'
+    'replace': 'recallacme'
+  - 'pattern': 'musta.ch'
+    'replace': 'abcd.ch'
+  - 'pattern': 'aws'
+    'replace': 'xws'
+  - 'pattern': "<Data Name='TargetUserName'>.*?</Data>"
+    'replace': "<Data Name='TargetUserName'>johndoe</Data>"
+  - 'pattern': '\\"csp_account_id\\":\\".*?\\"'
+    'replace': '\\"csp_account_id\\":\\"00000000-0000-0000-0000-0000112dfbc7\\"'
+  - 'pattern': 'NCR'
+    'replace': 'ACME'
+  - 'pattern': 'ncr'
+    'replace': 'acme'
+  - 'pattern': 'CNB'
+    'replace': 'ACME2'
+  - 'pattern': 'cbn'
+    'replace': 'acme2'
+  - 'pattern': 'AMS'
+    'replace': 'ACME4'
+  - 'pattern': 'ams'
+    'replace': 'acme4'
+  - 'pattern': 'wayfair'
+    'replace': 'acme'
+  - 'pattern': 'Robert.Flippen'
+    'replace': 'John.Doe'
+  - 'pattern': 'luis.foulks'
+    'replace': 'Jon.Doe'
+  - 'pattern': 'Dennis.Hawks'
+    'replace': 'Jon.Doe'
+  - 'pattern': 'jesse.kasman'
+    'replace': 'Jane.Doe'
+  - 'pattern': 'josue.ruiz'
+    'replace': 'jon.doe'
+  - 'pattern': 'Curtis.Peace'
+    'replace': 'J.Doe'
+  - 'pattern': 'adam.snider'
+    'replace': 'John.Doe'
+  - 'pattern': 'samuel.quinn'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'sabrina.snyder'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'Travis.Finck'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'toshaa.hope'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'wesley.ambrose'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'blake.mccracken'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'glenn.luteraan'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'martha.godfrey'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'su.wcheatham'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'lisa.duval'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'ricguards'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'muhammad.waqas'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'michael.fisherkeller'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'max.kachungu'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'jasmine.phillips'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'hermann.lang'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'jean.nevelus'
+    'replace': 'jjohn.ddoe'
+  - 'pattern': 'labspace.com'
+    'replace': 'acme.com'
+  - 'pattern': 'rvp.local'
+    'replace': 'acme.local'
+  - 'pattern': 'rapid7'
+    'replace': 'acme7'
+  - 'pattern': 'Rapid7'
+    'replace': 'Acme7'
+  # MCAFEE EPO
   - 'data': 'xml'
     'field': 'RawMACAddress'
     'pattern': '[A-Fa-f0-9]{12}'
-    'replace': 'hex'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': '[A-Fa-f0-9]{32,64}'
     'replace': 'hex'
     'activated': false
   - 'data': 'raw'
@@ -39,11 +177,6 @@ patterns:
     'pattern': 'gr://ipv4'
     'replace': 'ipv4'
     'activated': false
-  - 'data' : 'raw'
-    'field': '-'
-    'pattern': '[A-Fa-f0-9]{8}(?:-[A-Fa-f0-9]{4}){3}-[A-Fa-f0-9]{12}'
-    'replace': 'guid'
-    'activated': false
   - 'data' : 'kv'
     'field': 'externalId'
     'pattern': '[0-9]{6}'
@@ -61,98 +194,8 @@ patterns:
     'activated': false
   - 'data': 'raw'
     'field': '-'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
     'pattern': '\s\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\s'
     'replace': 'ipv4_between_spaces'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'NCR'
-    'replace': 'ALOHA'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'GPPBX5672UP-B'
-    'replace': 'GTTBZ4311IP-C'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'MSDATA9372PX-A'
-    'replace': 'MXDATA4162PQ-L'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'N5K-1'
-    'replace': 'Z4K-1'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'N5K-2'
-    'replace': 'Z4K-2'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'SLCDATA9372PX-A'
-    'replace': 'STFDATA41374KT-X'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'SLCDATA9372PX-B'
-    'replace': 'STFDATA41374KT-Y'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'STFDATA93180YC-EX-A'
-    'replace': 'AXYDATA41890ZW-AB-D'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'STJDATA9372PX-A'
-    'replace': 'SLWDATA4223PO-A'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'STJDATA9372PX-A'
-    'replace': 'SLWDATA4223PO-B'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'berssadbsedee51r'
-    'replace': 'batszadbturs11a'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'seaboard.local'
-    'replace': 'earthdoarb.local'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'Perryton_Batman_Grain'
-    'replace': 'Jhon_Dow_Bran'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'TXFCtrlRm3560'
-    'replace': 'AXFAbrlRe1234'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'GPADMIN3750X-1'
-    'replace': 'TFAADMIN213Z-1'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'GPPBX2960X'
-    'replace': 'TGFAZ1121Z'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': '10.40.0.20'
-    'replace': '10.40.1.50'
     'activated': false
   - 'data': 'raw'
     'field': '-'
@@ -164,98 +207,182 @@ patterns:
     'pattern': 'Host\s[A-Fa-f0-9]+\.[A-Fa-f0-9]+\.[A-Fa-f0-9]+\s'
     'replace': 'host_numbers_letters'
     'activated': false
+  # CISCO_ACS
   - 'data': 'kv'
     'field': 'Device IP Address'
     'pattern': 'gr://ipv4'
     'replace': 'ipv4'
-    'activated': true
+    'activated': false
   - 'data': 'kv'
     'field': 'AD-IP-Address'
     'pattern': 'gr://ipv4'
     'replace': 'ipv4'
-    'activated': true
+    'activated': false
   - 'data': 'kv'
     'field': 'AD-IP-Address-Black-Listed'
     'pattern': 'gr://ipv4'
     'replace': 'ipv4'
-    'activated': true
+    'activated': false
   - 'data': 'kv'
     'field': 'DestinationIPAddress'
     'pattern': 'gr://ipv4'
     'replace': 'ipv4'
-    'activated': true
+    'activated': false
+  - 'data': 'kv'
+    'field': 'Remote-Address'
+    'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'NAS-IP-Address'
+    'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'Framed-IP-Address'
+    'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': false
   - 'data': 'kv'
     'field': 'UserName'
     'pattern': '[\w\d.]+\\\\\\\\[\w\d.]+'
     'replace': 'domain_plus_user'
-    'activated': true
+    'activated': false
   - 'data': 'kv'
     'field': 'UserName'
     'pattern': '[\w\d.-]+/[\w\d.-]+'
     'replace': 'host_plus_domain'
-    'activated': true
+    'activated': false
   - 'data': 'kv'
     'field': 'UserName'
-    'pattern': '[\w\d.-]+.[\w\d.-]+'
+    'pattern': '(?:[A-Fa-f0-9]{2}:){5}[A-Fa-f0-9]{2}'
+    'replace': 'mac_address_colon'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'UserName'
+    'pattern': '[\w\d.]+\.[\w\d.]+'
     'replace': 'user_name_dot_surname'
-    'activated': true
+    'activated': false
   - 'data': 'kv'
     'field': 'User-Name'
     'pattern': '[\w\d.]+\\\\\\\\[\w\d.]+'
     'replace': 'domain_plus_user'
-    'activated': true
+    'activated': false
   - 'data': 'kv'
     'field': 'User-Name'
     'pattern': '[\w\d.]+@[\w\d.]+'
     'replace': 'domain_email_user'
-    'activated': true
+    'activated': false
   - 'data': 'kv'
     'field': 'User-Name'
-    'pattern': '[\w\d.-]+.[\w\d.-]+'
+    'pattern': '(?:[A-Fa-f0-9]{2}:){5}[A-Fa-f0-9]{2}'
+    'replace': 'mac_address_colon'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'User-Name'
+    'pattern': '[\w\d.]+\.[\w\d.]+'
     'replace': 'user_name_dot_surname'
-    'activated': true
+    'activated': false
   - 'data': 'kv'
     'field': 'AD-Domain'
     'pattern': '[\w\d.]+'
     'replace': 'ad_domain'
-    'activated': true
+    'activated': false
   - 'data': 'kv'
     'field': 'AD-Log-Id'
     'pattern': '\d+/\d+'
     'replace': 'ad_log_id'
-    'activated': true
+    'activated': false
   - 'data': 'raw'
     'field': '-'
     'pattern': '(?:[A-Fa-f0-9]{2}-){5}[A-Fa-f0-9]{2}'
     'replace': 'mac_address_dash'
-    'activated': true
+    'activated': false
   - 'data': 'raw'
     'field': '-'
     'pattern': '(?:[A-Fa-f0-9]{2}:){5}[A-Fa-f0-9]{2}'
     'replace': 'mac_address_colon'
-    'activated': true
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'corkcacs2'
-    'replace': 'varksacs2'
-    'activated': true
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'stfacs'
-    'replace': 'abgacs'
-    'activated': true
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'PORGPACS'
-    'replace': 'PIIGSACS'
-    'activated': true
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'sdmryprddom2'
-    'replace': 'sbtryhomdom1'
-    'activated': true
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'sebmexico'
-    'replace': 'baschile'
-    'activated': true
+    'activated': false
+  # MIMECAST
+  - 'data': 'kv'
+    'field': 'headerFrom'
+    'pattern': '[\w\d.]+@[\w\d.]+'
+    'replace': 'domain_email_user'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'IP'
+    'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': false
+  - 'pattern': 'prod.outlook.com'
+    'replace': 'test.email.com'
+  # IMPERVA_WAF
+  - 'data': 'kv'
+    'field': 'src'
+    'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'dst'
+    'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'xff'
+    'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'sourceServiceName'
+    'pattern': 'gr://host'
+    'replace': 'shost'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'url'
+    'pattern': 'gr://host'
+    'replace': 'shost'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'deviceExternalId'
+    'pattern': '\d+'
+    'replace': 'id_number'
+    'activated': false
+  - 'pattern': '[A-Fa-f0-9]{128}'
+    'replace': 'hex'
+    'activated': false
+  - 'pattern': 'nwlink163'
+    'replace': 'device01'
+  - 'data': 'kv'
+    'field': 'tcs7'
+    'pattern': 'gr://latitude_longitude'
+    'replace': '17.000000'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'tcs8'
+    'pattern': 'gr://latitude_longitude'
+    'replace': '-38.000000'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'tcs4'
+    'pattern': 'gr://guid'
+    'replace': 'guid'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'siteid'
+    'pattern': '\d+'
+    'replace': 'guid'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'suid'
+    'pattern': '\d+'
+    'replace': 'id_number'
+    'activated': false
+  - 'data': 'kv'
+    'field': 'Customer'
+    'pattern': '[\w\d_-]+'
+    'replace': 'random_company_name'
+    'activated': false
+  # HONEYD
+  - 'pattern': 'gr://ipv4'
+    'replace': 'ipv4'
+    'activated': false
