add support to json simple field

--- a/sntzr.yaml
+++ b/sntzr.yaml
@@ -7,158 +7,159 @@ global_regex:
   'gr://guid': '[A-Fa-f0-9]{8}(?:-[A-Fa-f0-9]{4}){3}-[A-Fa-f0-9]{12}'
   'gr://sid': 'sid_[0-9a-zA-Z]+_[0-9A-Z]+'
   'gr://email': '[\w\.-]+@[\w\.-]+(?:\.[\w]+)+'
+  'gr://json_value': '[^\\\"]*'
 
 patterns:
-  - 'pattern': 'gr://email'
-    'replace': 'email_simple'
-  - 'pattern': 'carcgl'
-    'replace': 'acmecgl'
-  - 'pattern': 'CARCGL'
-    'replace': 'ACMECGL'
-  - 'pattern': 'Fyrnetics'
-    'replace': 'Acmenetics'
-  - 'pattern': 'cvshealth'
-    'replace': 'acme'
-  - 'pattern': 'aetna'
-    'replace': 'acme2'
-  - 'pattern': '@[^xyz.com].*?>'
-    'replace': '@acmex.com>'
-  - 'pattern': 'vuhl\.root\.mrc'
-    'replace': 'acme.root.mrc'
-  - 'pattern': 'vu\.com'
-    'replace': 'acme.com'
-  - 'pattern': 'veteransunited'
-    'replace': 'acme'
-  - 'pattern': '<EMailAddress>.*?</EMailAddress>'
-    'replace': '<EMailAddress>john@acme.com</EMailAddress>'
-  - 'pattern': 'vu_security_policy'
-    'replace': 'acme_security_policy'
-  - 'pattern': 'aeth\.aetna\.com'
-    'replace': 'acme.com'
-  - 'pattern': '"ssh-rsa .*?\\"'
-    'replace': '"ssh-rsa __SSH_KEY__"'
-  - 'pattern': '\\"USERNAME\\": \\".*?\\"'
-    'replace': '\"USERNAME\": \"johndoe\"'
-  - 'pattern': '\\"USER\\": \\".*?\\"'
-    'replace': '\"USER\": \"johndoe\"'
-  - 'pattern': '\\"PASSWORD\\": \\".*?\\"'
-    'replace': '\"PASSWORD\": \"fakepassword\"'
-  - 'pattern': 'AETH'
-    'replace': 'ACME'
-  - 'pattern': 'aetna\.co'
-    'replace': 'acme.co'
-  - 'pattern': 'aeth'
-    'replace': 'acme'
-  - 'pattern': '\\"windows_desktopini_access_username\\": \\".*?\\"'
-    'replace': '\"windows_desktopini_access_username\": \"johndoe\"'
-  - 'pattern': '\\"mac_address\\": \\".*?\\"'
-    'replace': '\"mac_address\": \"00:00:00:00:00:00\"'
-  - 'pattern': 'EUOSDSFTP01'
-    'replace': 'XXXXXXFTP01'
-  - 'pattern': 'ironmountain'
-    'replace': 'acme'
-  - 'pattern': '\\"user\\": \\".*?\\"'
-    'replace': '\\"user\\": \\"johndoe\\"'
-  - 'pattern': '\\"user\\":\\".*?\\"'
-    'replace': '\\"user\\":\\"johndoe\\"'
-  - 'pattern': '"user": ".*?"'
-    'replace': '"user": "johndoe"'
-  - 'pattern': '<user>.*?</user>'
-    'replace': '<user>johndoe</user>'
-  - 'pattern': '\\u003cuser\\u003e.*?\\u003c/user\\u003e'
-    'replace': '\\u003cuser\\u003ejohndoe\\u003c/user\\u003e'
-  - 'pattern': '/users/[a-zA-Z0-9._-]+'
-    'replace': '/users/johndoe'
-  - 'pattern': 'tartarus.org'
-    'replace': 'somecompany.org'
-  - 'pattern': 'euosdsftp02'
-    'replace': 'xxyyzzftp02'
-  - 'pattern': 'recall.com'
-    'replace': 'emca.com'
-  - 'pattern': 'Carlsberg'
-    'replace': 'JohnD'
-  - 'pattern': 'Sanofi'
-    'replace': 'JohnD'
-  - 'pattern': 'recallstoraenso'
-    'replace': 'recallacme'
-  - 'pattern': 'musta.ch'
-    'replace': 'abcd.ch'
-  - 'pattern': 'aws'
-    'replace': 'xws'
-  - 'pattern': "<Data Name='TargetUserName'>.*?</Data>"
-    'replace': "<Data Name='TargetUserName'>johndoe</Data>"
-  - 'pattern': '\\"csp_account_id\\":\\".*?\\"'
-    'replace': '\\"csp_account_id\\":\\"00000000-0000-0000-0000-0000112dfbc7\\"'
-  - 'pattern': 'NCR'
-    'replace': 'ACME'
-  - 'pattern': 'ncr'
-    'replace': 'acme'
-  - 'pattern': 'CNB'
-    'replace': 'ACME2'
-  - 'pattern': 'cbn'
-    'replace': 'acme2'
-  - 'pattern': 'AMS'
-    'replace': 'ACME4'
-  - 'pattern': 'ams'
-    'replace': 'acme4'
-  - 'pattern': 'wayfair'
-    'replace': 'acme'
-  - 'pattern': 'Robert.Flippen'
-    'replace': 'John.Doe'
-  - 'pattern': 'luis.foulks'
-    'replace': 'Jon.Doe'
-  - 'pattern': 'Dennis.Hawks'
-    'replace': 'Jon.Doe'
-  - 'pattern': 'jesse.kasman'
-    'replace': 'Jane.Doe'
-  - 'pattern': 'josue.ruiz'
-    'replace': 'jon.doe'
-  - 'pattern': 'Curtis.Peace'
-    'replace': 'J.Doe'
-  - 'pattern': 'adam.snider'
-    'replace': 'John.Doe'
-  - 'pattern': 'samuel.quinn'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'sabrina.snyder'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'Travis.Finck'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'toshaa.hope'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'wesley.ambrose'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'blake.mccracken'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'glenn.luteraan'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'martha.godfrey'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'su.wcheatham'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'lisa.duval'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'ricguards'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'muhammad.waqas'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'michael.fisherkeller'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'max.kachungu'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'jasmine.phillips'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'hermann.lang'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'jean.nevelus'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'labspace.com'
-    'replace': 'acme.com'
-  - 'pattern': 'rvp.local'
-    'replace': 'acme.local'
-  - 'pattern': 'rapid7'
-    'replace': 'acme7'
-  - 'pattern': 'Rapid7'
-    'replace': 'Acme7'
+  #- 'pattern': 'gr://email'
+  #  'replace': 'email_simple'
+  #- 'pattern': 'carcgl'
+  #  'replace': 'acmecgl'
+  #- 'pattern': 'CARCGL'
+  #  'replace': 'ACMECGL'
+  #- 'pattern': 'Fyrnetics'
+  #  'replace': 'Acmenetics'
+  #- 'pattern': 'cvshealth'
+  #  'replace': 'acme'
+  #- 'pattern': 'aetna'
+  #  'replace': 'acme2'
+  #- 'pattern': '@[^xyz.com].*?>'
+  #  'replace': '@acmex.com>'
+  #- 'pattern': 'vuhl\.root\.mrc'
+  #  'replace': 'acme.root.mrc'
+  #- 'pattern': 'vu\.com'
+  #  'replace': 'acme.com'
+  #- 'pattern': 'veteransunited'
+  #  'replace': 'acme'
+  #- 'pattern': '<EMailAddress>.*?</EMailAddress>'
+  #  'replace': '<EMailAddress>john@acme.com</EMailAddress>'
+  #- 'pattern': 'vu_security_policy'
+  #  'replace': 'acme_security_policy'
+  #- 'pattern': 'aeth\.aetna\.com'
+  #  'replace': 'acme.com'
+  #- 'pattern': '"ssh-rsa .*?\\"'
+  #  'replace': '"ssh-rsa __SSH_KEY__"'
+  #- 'pattern': '\\"USERNAME\\": \\".*?\\"'
+  #  'replace': '\"USERNAME\": \"johndoe\"'
+  #- 'pattern': '\\"USER\\": \\".*?\\"'
+  #  'replace': '\"USER\": \"johndoe\"'
+  #- 'pattern': '\\"PASSWORD\\": \\".*?\\"'
+  #  'replace': '\"PASSWORD\": \"fakepassword\"'
+  #- 'pattern': 'AETH'
+  #  'replace': 'ACME'
+  #- 'pattern': 'aetna\.co'
+  #  'replace': 'acme.co'
+  #- 'pattern': 'aeth'
+  #  'replace': 'acme'
+  #- 'pattern': '\\"windows_desktopini_access_username\\": \\".*?\\"'
+  #  'replace': '\"windows_desktopini_access_username\": \"johndoe\"'
+  #- 'pattern': '\\"mac_address\\": \\".*?\\"'
+  #  'replace': '\"mac_address\": \"00:00:00:00:00:00\"'
+  #- 'pattern': 'EUOSDSFTP01'
+  #  'replace': 'XXXXXXFTP01'
+  #- 'pattern': 'ironmountain'
+  #  'replace': 'acme'
+  #- 'pattern': '\\"user\\": \\".*?\\"'
+  #  'replace': '\\"user\\": \\"johndoe\\"'
+  #- 'pattern': '\\"user\\":\\".*?\\"'
+  #  'replace': '\\"user\\":\\"johndoe\\"'
+  #- 'pattern': '"user": ".*?"'
+  #  'replace': '"user": "johndoe"'
+  #- 'pattern': '<user>.*?</user>'
+  #  'replace': '<user>johndoe</user>'
+  #- 'pattern': '\\u003cuser\\u003e.*?\\u003c/user\\u003e'
+  #  'replace': '\\u003cuser\\u003ejohndoe\\u003c/user\\u003e'
+  #- 'pattern': '/users/[a-zA-Z0-9._-]+'
+  #  'replace': '/users/johndoe'
+  #- 'pattern': 'tartarus.org'
+  #  'replace': 'somecompany.org'
+  #- 'pattern': 'euosdsftp02'
+  #  'replace': 'xxyyzzftp02'
+  #- 'pattern': 'recall.com'
+  #  'replace': 'emca.com'
+  #- 'pattern': 'Carlsberg'
+  #  'replace': 'JohnD'
+  #- 'pattern': 'Sanofi'
+  #  'replace': 'JohnD'
+  #- 'pattern': 'recallstoraenso'
+  #  'replace': 'recallacme'
+  #- 'pattern': 'musta.ch'
+  #  'replace': 'abcd.ch'
+  #- 'pattern': 'aws'
+  #  'replace': 'xws'
+  #- 'pattern': "<Data Name='TargetUserName'>.*?</Data>"
+  #  'replace': "<Data Name='TargetUserName'>johndoe</Data>"
+  #- 'pattern': '\\"csp_account_id\\":\\".*?\\"'
+  #  'replace': '\\"csp_account_id\\":\\"00000000-0000-0000-0000-0000112dfbc7\\"'
+  #- 'pattern': 'NCR'
+  #  'replace': 'ACME'
+  #- 'pattern': 'ncr'
+  #  'replace': 'acme'
+  #- 'pattern': 'CNB'
+  #  'replace': 'ACME2'
+  #- 'pattern': 'cbn'
+  #  'replace': 'acme2'
+  #- 'pattern': 'AMS'
+  #  'replace': 'ACME4'
+  #- 'pattern': 'ams'
+  #  'replace': 'acme4'
+  #- 'pattern': 'wayfair'
+  #  'replace': 'acme'
+  #- 'pattern': 'Robert.Flippen'
+  #  'replace': 'John.Doe'
+  #- 'pattern': 'luis.foulks'
+  #  'replace': 'Jon.Doe'
+  #- 'pattern': 'Dennis.Hawks'
+  #  'replace': 'Jon.Doe'
+  #- 'pattern': 'jesse.kasman'
+  #  'replace': 'Jane.Doe'
+  #- 'pattern': 'josue.ruiz'
+  #  'replace': 'jon.doe'
+  #- 'pattern': 'Curtis.Peace'
+  #  'replace': 'J.Doe'
+  #- 'pattern': 'adam.snider'
+  #  'replace': 'John.Doe'
+  #- 'pattern': 'samuel.quinn'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'sabrina.snyder'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'Travis.Finck'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'toshaa.hope'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'wesley.ambrose'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'blake.mccracken'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'glenn.luteraan'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'martha.godfrey'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'su.wcheatham'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'lisa.duval'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'ricguards'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'muhammad.waqas'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'michael.fisherkeller'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'max.kachungu'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'jasmine.phillips'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'hermann.lang'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'jean.nevelus'
+  #  'replace': 'jjohn.ddoe'
+  #- 'pattern': 'labspace.com'
+  #  'replace': 'acme.com'
+  #- 'pattern': 'rvp.local'
+  #  'replace': 'acme.local'
+  #- 'pattern': 'rapid7'
+  #  'replace': 'acme7'
+  #- 'pattern': 'Rapid7'
+  #  'replace': 'Acme7'
   # MCAFEE EPO
   - 'data': 'xml'
     'field': 'RawMACAddress'
@@ -432,3 +433,9 @@ patterns:
   - 'pattern': 'user: ''(?!unconnected)[a-z]*'''
     'replace': 'mysql_user'
     'activated': false
+  # PROOFPOINT_ON_DEMAND
+  - 'data': 'json'
+    'field': 'id'
+    'pattern': 'gr://json_value'
+    'replace': 'ID_KEY'
+    'activated': true
