increase json compatibility

--- a/sntzr.yaml
+++ b/sntzr.yaml
@@ -7,7 +7,9 @@ global_regex:
   'gr://guid': '[A-Fa-f0-9]{8}(?:-[A-Fa-f0-9]{4}){3}-[A-Fa-f0-9]{12}'
   'gr://sid': 'sid_[0-9a-zA-Z]+_[0-9A-Z]+'
   'gr://email': '[\w\.-]+@[\w\.-]+(?:\.[\w]+)+'
-  'gr://json_value': '[^\\\"]*'
+  'gr://json_string_value': '\"[^\"]*\"'
+  'gr://json_number_value': '[+-]?[0-9]+'
+  'gr://json_array': '\[[^\]]*\]'
 
 patterns:
   #- 'pattern': 'gr://email'
@@ -435,7 +437,169 @@ patterns:
     'activated': false
   # PROOFPOINT_ON_DEMAND
   - 'data': 'json'
-    'field': 'id'
-    'pattern': 'gr://json_value'
-    'replace': 'ID_KEY'
+    'field': '_adhocreviewcycleid'
+    'pattern': 'gr://json_number_value'
+    'replace': 'ADHOC_REVIEW_ID_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': '_adhocreviewcycleid'
+    'pattern': 'gr://json_number_value'
+    'replace': 'pos_neg_number'
     'activated': true
+  - 'data': 'json'
+    'field': '_authoremail'
+    'pattern': 'gr://json_string_value'
+    'replace': 'AUTHOREMAIL_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': '_authoremail'
+    'pattern': 'gr://json_string_value'
+    'replace': 'email_user'
+    'activated': true
+  - 'data': 'json'
+    'field': '_authoremaildisplayname'
+    'pattern': 'gr://json_string_value'
+    'replace': 'AUTHOR_EMAIL_DISPLAY_NAME_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': '_authoremaildisplayname'
+    'pattern': 'gr://json_string_value'
+    'replace': 'surname_comma_name'
+    'activated': false
+  - 'data': 'json'
+    'field': '_dlc_docid'
+    'pattern': 'gr://json_string_value'
+    'replace': 'DLC_DOCID_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': '_dlc_docid'
+    'pattern': 'gr://json_string_value'
+    'replace': 'doc_id'
+    'activated': false
+  - 'data': 'json'
+    'field': '_dlc_dociditemguid'
+    'pattern': 'gr://json_string_value'
+    'replace': 'DLC_DOCIDGUID_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': '_dlc_dociditemguid'
+    'pattern': 'gr://json_string_value'
+    'replace': 'guid'
+    'activated': false
+  - 'data': 'json'
+    'field': '_previousadhocreviewcycleid'
+    'pattern': 'gr://json_number_value'
+    'replace': 'PREVIOUS_ADHOC_REVIEW_ID_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': '_previousadhocreviewcycleid'
+    'pattern': 'gr://json_number_value'
+    'replace': 'pos_neg_number'
+    'activated': false
+  - 'data': 'json'
+    'field': 'agent'
+    'pattern': 'gr://json_string_value'
+    'replace': 'AGENT_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': 'agent'
+    'pattern': 'gr://json_string_value'
+    'replace': 'agent'
+    'activated': false
+  - 'data': 'json'
+    'field': 'assetid'
+    'pattern': 'gr://json_string_value'
+    'replace': 'ASSET_ID_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': 'assetid'
+    'pattern': 'gr://json_string_value'
+    'replace': 'assetid'
+    'activated': false
+  - 'data': 'json'
+    'field': 'author'
+    'pattern': 'gr://json_string_value'
+    'replace': 'AUTHOR_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': 'author'
+    'pattern': 'gr://json_string_value'
+    'replace': 'name_surname'
+    'activated': false
+  - 'data': 'json'
+    'field': 'id'
+    'pattern': 'gr://json_string_value'
+    'replace': 'ID_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': 'id'
+    'pattern': 'gr://json_string_value'
+    'replace': 'big_id'
+    'activated': false
+  - 'data': 'json'
+    'field': 'business objects context information'
+    'pattern': 'gr://json_string_value'
+    'replace': 'BOCI_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': 'business objects context information'
+    'pattern': 'gr://json_string_value'
+    'replace': 'hex'
+    'activated': false
+  - 'data': 'json'
+    'field': 'business objects context information1'
+    'pattern': 'gr://json_string_value'
+    'replace': 'hex'
+    'activated': false
+  - 'data': 'json'
+    'field': 'business objects context information2'
+    'pattern': 'gr://json_string_value'
+    'replace': 'hex'
+    'activated': false
+  - 'data': 'json'
+    'field': 'business objects context information3'
+    'pattern': 'gr://json_string_value'
+    'replace': 'hex'
+    'activated': false
+  - 'data': 'json'
+    'field': 'business objects context information4'
+    'pattern': 'gr://json_string_value'
+    'replace': 'hex'
+    'activated': false
+  - 'data': 'json'
+    'field': 'business objects context information5'
+    'pattern': 'gr://json_string_value'
+    'replace': 'hex'
+    'activated': false
+  - 'data': 'json'
+    'field': 'business objects context information6'
+    'pattern': 'gr://json_string_value'
+    'replace': 'hex'
+    'activated': false
+  - 'data': 'json'
+    'field': 'buyer email'
+    'pattern': 'gr://json_string_value'
+    'replace': 'BUYEREMAIL_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': 'buyer email'
+    'pattern': 'gr://json_string_value'
+    'replace': 'email_user'
+    'activated': false
+  - 'data': 'json'
+    'field': 'cartid'
+    'pattern': 'gr://json_string_value'
+    'replace': 'CARTID_KEY'
+    'activated': false
+  - 'data': 'json'
+    'field': 'cartid'
+    'pattern': 'gr://json_string_value'
+    'replace': 'cartid'
+    'activated': false
+  - 'data': 'json'
+    'field': 'cc'
+    'pattern': 'gr://json_array'
+    'replace': 'CC_KEY'
+    'activated': true
+
+
